--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <div class="register-button">
       <p>¿No tienes cuenta?
       <br>
+      <a href="../registro/registro.html">
       <button>Crear mi cuenta</button></p>
+      </a>
     </div>
 
   </div>
