--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="register-button">
       <p>¿No tienes cuenta?
       <br>
-      <a href="../registro/registro.html">
+      <a href="/registro.html">
       <button>Crear mi cuenta</button></p>
       </a>
     </div>
